MAINT: Fix java 23 info error etc